[project]
name = "tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Qasim", email = "mqasim111786111@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "openai",
    "google-generativeai",
    "pydantic",
    "openai-agents>=0.0.19",
]

[project.scripts]
tutor = "tutor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tutor"] 